--- a/index.html
+++ b/index.html
@@ -7,17 +7,22 @@
     <title>Spotfinder</title>
 </head>
 <body>
+
     <div class="header">
-        <div class="logo"></div>
+        <div class="logo"> <img src="media/spotfinder-logo-blue.049c7fdc813df46e912c.png" class="logoimg"></div>
         <ul>
             <li>Home</li>
             <li>Feature</li>
             <li>Blog</li>
             <li>Become a Partner</li>
         </ul>
-        <div class="headericon"></div>
+        <div class="headericon">
+            <button class="login">Login</button>
+            <button class="rigester">Rigester</button>
+        </div>
     </div>
     <hr>
+    <div class="website">
     <div class="maintop">
         <div class="maintopleft">
             <h1>Parking Simplified</h1>
@@ -45,7 +50,198 @@
         </div>
         <img src="media/title.png" alt="" class="maintopright">
     </div>
+    <div class="main2">
+        <div class="head">
+        <h1>We are everywhere</h1>
+        <h6>Find a new home for your car</h6></div>
+<div class="cards">
+        <div class="card123">
+                <div class="cardimg"><img src="media/3.jpg" class="imagedes"></div>
+                <div class="carddesc"><h2>City Parking</h2>
+                <button>Find a Parking</button></div>
+            </div>
+        <div class="card123">
+                <div class="cardimg"><img src="media/3.jpg"  class="imagedes"></div>
+                <div class="carddesc"><h2>Semi Truck Parking</h2>
+                <button>Find a Parking</button></div>
+            </div>
+        <div class="card123">
+                <div class="cardimg"><img src="media/title.png" class="imagedes"></div>
+                <div class="carddesc"><h2>Airport Parking</h2>
+                <button>Find a Parking</button></div>
+        </div>
+</div>
+    </div>
+    <div class="main3">
+
+        <div class="main3c">
+            <h1>Why Spot Finder?</h1>
+            <h6>We understand the pain for finding the right spot where your car feels home. <br>Handicap friendly spots, diligent customer support, we aim to comfort you with  <br>nearest parking spot!</h6>
+            <div class="main3cards">
+                <div class="main3card">
+                    <p><img src="media/download (1).png" class="icon3"></p>
+                <h6>It's fast</h6>
+            <h6>Our new app makes finding spots in <br>
+                not more than 3 steps. We're building <br>the largest network of parking spots!</h6></div>
+                <div class="main3card"> <p><img src="media/download (2).png" class="icon3"></p>
+                    <h6>It's easy</h6>
+                <h6>We aim to keep you hooked to our <br>
+                    services with an experience excellence <br>team!</h6></div>
+                <div class="main3card"> <p><img src="media/download (3).png" class="icon3"></p>
+                    <h6>It's affordable</h6>
+                <h6>Find affordable spots and spend your <br>
+                    days stress-free while your car is <br>parked with us.</h6></div> 
+            </div>
+        </div>
+    </div>
+<div class="main4">
+    <h1>Airport Parking</h1>
+    <div class="main4card">
+        <div class="card4">
+            <div class="card4t"><img src="media/3.jpg" class="imgc4"></div>
+            <div class="card4b">
+                <h6>Days Inn by Wyndh</h6>
+                <div><p>Days Inn by Wyndham hotel is</p></div>
+                <button>Book Now</button></div>
+    </div>
+        <div class="card4">
+            <div class="card4t"><img src="media/3.jpg" class="imgc4"></div>
+        <div class="card4b">
+            <h6>Days Inn by Wyndh</h6>
+            <div><p>Da</p></div>
+            <button>Book Now</button>
+        </div>
+    </div>
+        <div class="card4">
+            <div class="card4t"><img src="media/3.jpg" class="imgc4"></div>
+        <div class="card4b">
+            <h6>Home2 Suites by Hil</h6>
+            <div><p>Th</p></div>
+            <button>Book Now</button>
+        </div>
+    </div>
+    <div class="card4">
+            <div class="card4t"><img src="media/3.jpg" class="imgc4"></div>
+        <div class="card4b">
+            <h6>Holiday Inn Express</h6>
+            <div><p>Holdiay Inn Express & Suites loca</p>
+           <button>Book Now</button></div>
+    </div>
+    </div>
+</div>
+
+
+
+<div class="main5">
+    <div class="comm">
+        <div class="commmain">
+        <div class="comm1"></div>
+                <div class="title"><p>Anonyomous</p></div></div>
+                <div class="comm12">
+                <div class="heading"><p>We loved using spotfinder.It was easy and simple for us.I am 80 years old and <br> we liked how easy it was to do a booking <br>Read More.....</p></div>
+            </div>
+            </div></div>
+        
+
+<div class="main6">
+    <div class="heading6"><p>Interesting Reads!</p></div>
+    <div class="heading62">
+        <p>New articles</p>
+        <p style="color: red;">View All</p>
+    </div>
+    <div class="card6"> 
+        <div class="card61">
+        <div class="card6t"><img src="media/61.jpeg" class="imgc6"></div>
+    <div class="card6b">
+        <p>Holdiay Inn Express & Suites loca</p>
+</div>
+</div>
+<div class="card61">
+    <div class="card6t"><img src="media/62.PNG" class="imgc6"></div>
+<div class="card6b">
+    <p>Holdiay Inn Express & Suites loca</p>
+    
+</div>
+</div>
+<div class="card61">
+    <div class="card6t"><img src="media/63.png" class="imgc6"></div>
+<div class="card6b">
+    <p>Holdiay Inn Express & Suites loca</p>
+
+</div>
+</div>
+
+    </div>
+</div>
+
+
+<div class="main7">
+    <div class="img7"><img src="media/home_transport_bg.jpg" class="img7bg">
+
+    <div class="heading7"><p>Partner With Spot Finder!</p></div>
+    <div class="subheading7">
+        <div class="p7"><p>Grow your business by listing your service with us.</p></div>
+        <div class="button7"><button>Become a Partner</button></div>
+    </div>
+</div></div>
+
+<div class="main8">
+    <div class="head8">
+    <div class="heading8">
+        <h1>SUBSCRIBE</h1>
+        <p>Subscribe to our Spot finder & stay Updated</p>
+    </div>
+    <div class="email"><input type="email" name="" id="" placeholder="Enter Your Email" class="us">
+    <button>Subscribe</button></div>
+</div></div>
+<hr style="border: 2px solid red;">
+
+
+
+
+<div class="main9">
+    <div class="left9">
+        <h2>About Us</h2>
+        <p>As Travelers and preplanners on a trip,<br>
+             we hate not being able to find parking on <br>
+             a reliable site. We decided to solve this by starting in house!</p>
+    </div>
+    <div class="centre9">
+        <h2>Company</h2>
+        <h3>privacy Policy <br> cancellation policy <br> Terms and Conditions</h3>
+    </div>
+    <div class="right9">
+        <div class="l9"><h2>Contact Info</h2></div>
+        <div class="r9">
+            <h3>contact@spotfinder.app <br>833-799-7770 <br>Fort Lauderdale, Florida <br>Contact Support</h3>
+        </div>
+    </div>
+</div>
+<hr style="border: 1px solid gray;">
+
+<div class="main10"><h2>All rights reserved © 2024 - SpotFinder by Jamal Ahmed </h2></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </div>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
-</html>
+</html>c
